# interview-platform-external-asrtdd

./: .gitignore  README.md  config.yaml  go.mod  main.go  main.py  pyproject.toml
cmd/: create.go  delete.go  root.go
