[tool.poetry]
name = "biograph-platform-interview"
version = "0.1.0"
description = "A utility to simplify cloud infrastructure provisioning"
authors = ["Martin H Berwanger <martin.berwanger@biograph.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.1.8"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
